--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link href="../css/styles.css" rel="stylesheet" />
-    <title>Noticias y proyectos</title>
+    <title>Noticias y proyectos especiales</title>
   </head>
   <body id="page-top">
     <!-- Navigation-->
